add governance and update migrations

--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "prettier": "^2.0.5",
     "prettier-plugin-solidity": "^1.0.0-alpha.22",
     "solhint": "^2.1.0",
-    "solidity-coverage": "0.7.0"
+    "solidity-coverage": "^0.7.12",
+    "tmp-promise": "^3.0.2"
   },
   "homepage": "https://github.com/bitpopulous/DeFi",
   "dependencies": {
